# Parch-backup

./: Cargo.toml  README.md
pkgbuild/: .gitignore  PKGBUILD  pkgbuild
src/: cli.rs  main.rs
src/backup/: backup.rs  consolidate.rs  mod.rs
src/flatpak/: flatpak.rs  mod.rs
src/pm/: mod.rs  paru.rs
src/restore/: restore.rs
src/system/: home.rs  keys.rs  mod.rs  schedule.rs
src/utils/: mod.rs
src/utils/compression/: mod.rs
src/utils/security/: mod.rs
