[package]
name = "parchbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.8"
tar = "0.4.41"
tempfile = "3.10.1"
thiserror = "1.0.61"
xz2 = "0.1.7"
