[package]
name = "parchbackup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
# cron = "0.12.1"
ctrlc = "3.4.4"
dialoguer = "0.11.0"
flate2 = "1.0.30"
hkdf = "0.12.4"
# hmac = "0.12.1"
regex = { version = "1.10.5", features = ["use_std"] }
sha2 = "0.10.8"
tar = "0.4.41"
walkdir = "2.5.0"

[profile.release]
opt-level = 3            # Optimize for speed.
lto = true               # Enable Link Time Optimization.
codegen-units = 1        # Fewer codegen units for better optimization.
panic = "abort"          # Abort on panic to reduce binary size.
strip = true             # Remove symbols from the binary.
